# car-wash-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
car_wash/: config.py  database.py  main.py
car_wash/auth/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py  utils.py
car_wash/cars/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py  sub_router.py  utils.py
car_wash/cars/body_types/: models.py  repository.py  router.py  schemas.py  service.py
car_wash/cars/brands/: models.py  repository.py  router.py  schemas.py  service.py
car_wash/cars/car_models/: repository.py  router.py  schemas.py  service.py
car_wash/cars/configurations/: repository.py  router.py  schemas.py  service.py
car_wash/cars/generations/: repository.py  router.py  schemas.py  service.py
car_wash/storage/: dependencies.py  schemas.py  service.py  utils.py
car_wash/users/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
car_wash/users/roles/: repository.py  router.py  schemas.py  service.py
car_wash/utils/: custom_swagger_docs.py  exception_handling.py  fill_db.py  fill_db_with_cars.py  repository.py  router.py  routers.py  schemas.py  service.py
car_wash/utils/data_migration/: fill_db.py
car_wash/utils/data_migration/data_sets/: car_body_types.csv
car_wash/washes/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
car_wash/washes/additions/: repository.py  router.py  schemas.py  service.py
car_wash/washes/bookings/: repository.py  router.py  schemas.py  service.py
car_wash/washes/boxes/: repository.py  router.py  schemas.py  service.py
car_wash/washes/locations/: models.py  repository.py  router.py  schemas.py  service.py
car_wash/washes/prices/: repository.py  router.py  schemas.py  service.py
car_wash/washes/schedules/: repository.py  router.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: 2024_08_13_2039-45d9baac9d23_.py  2024_08_13_2134-57ff472fa9c2_.py  2024_08_16_0244-416373f7120f_.py  2024_08_16_1954-790cae99105b_.py  2024_08_17_0127-48f2b7add67e_.py  2024_08_19_0313-c8abab73369a_.py  2024_08_19_1452-5633b9e4bffa_.py  2024_09_01_0318-5e76a7f6e1c9_.py  2024_09_01_1603-ac9c94aad02a_data_add_default_roles_and_users.py  2024_09_03_2203-225d04568ac3_.py  2024_09_03_2322-4f7dd4f24c07_.py  2024_09_03_2349-9ca350627a46_.py  2024_09_03_2359-5798288049bd_.py  2024_09_04_2057-61816b8072f2_.py  2024_09_17_0158-b0ad912ee617_.py  2024_09_17_0159-ac9c94aad02a_data_add_default_roles_and_users.py  2024_09_28_2009-cdacd09ebc86_.py  2024_10_08_1815-f0af2921b756_.py  2025_01_06_1701-d1247d882db3_.py  2025_01_06_1810-a90e1999ff06_.py  2025_01_06_1853-34a6b2835aa8_.py  2025_01_06_1908-82072d3419af_.py  2025_01_08_1713-516330b0185f_.py  2025_01_08_1718-d445484e6aaa_.py  2025_01_08_1719-0e8ad1299d4c_.py  2025_01_08_1720-b052f441a561_.py  2025_01_08_1744-8443d14da5c8_.py
